--- a/cv.tex
+++ b/cv.tex
@@ -7,27 +7,21 @@
 
 %______________________________________________________________________________________________________________________
 \begin{document}
-\name{\Large Kathryn D. Huff}
+\name{\Large Andrew T. Tredennick}
 \begin{resume}
 
     %__________________________________________________________________________________________________________________
     % Contact Information
     \section{\mysidestyle Contact\\Information}
 
-    Department of Nuclear Engineering, University of California, Berkeley       \hfill mobile: (281) 734-1342           \vspace{0mm}\\\vspace{0mm}%
-    Postdoctoral Scholar, \textsl{Nuclear Science and Security Consortium}       \hfill e-mail: katyhuff@gmail.com            \vspace{0mm}\\\vspace{0mm}%
-    Data Science Fellow, \textsl{Berkeley Institute for Data Science}           \hfill website: katyhuff.github.com     \vspace{0mm}\\\vspace{-4.5mm}%
+    Postdoctoral Fellow      							 \hfill mobile: (970) 443-1599            \vspace{0mm}\\\vspace{0mm}%
+    Department of Wildland Resources and    		          \hfill e-mail: atredenn@gmail.com    \vspace{0mm}\\\vspace{0mm}%
+    The Ecology Center, Utah State University      	          \hfill website: atredennicik.github.io  \vspace{0mm}\\\vspace{-4.5mm}%
 
-    %__________________________________________________________________________________________________________________
-    % Resume Objective
-    \section{\mysidestyle Objective}
-		Seeking research and teaching opportunities in nuclear engineering and scientific computation.%
     %__________________________________________________________________________________________________________________
     % Research Interests
     \section{\mysidestyle Research\\Interests}
-		Advanced nuclear reactors and fuel cycles, scientific 
-                computation, sustainable energy systems, waste 
-                management, computational systems analysis. %
+		stability of populations, communities, and ecosystems; data--model assimilation; ecology of savannas and forests; coexistence of species and functional groups; ecological forecasting %
     %__________________________________________________________________________________________________________________
     % Academic Appointments
     %	 	\vspace{-2mm}
@@ -37,367 +31,87 @@
     % Education
     \section{\mysidestyle Education}
 
-    \textbf{University of Wisconsin}, Madison, WI \vspace{1mm}\\\vspace{1mm}%
-    \textsl{Doctor of Philosophy} \textsc{Nuclear Engineering}\hfill \textbf{ Aug 2008 -- Aug 2013}\vspace{-3mm}\\\vspace{-1mm}%
-    \begin{list2}
-        \item Dissertation : An Integrated Used Fuel Disposition and Generic Repository Model for Fuel Cycle Analysis
-        \item Advisor:  Professor Paul P.H. Wilson                
-    \end{list2}\vspace{-1.5mm}
-    \textbf{University of Chicago}, Chicago, IL \vspace{1mm}\\\vspace{1mm}%
-    \textsl{Bachelor of Arts and Sciences}\textsc{ Physics} \hfill \textbf{Aug 2004 -- June 2008}\vspace{-3mm}\\\vspace{-1mm}%
-    \begin{list2}
-	\item Undergraduate Thesis: Celestial Gain Calibrations of QUIET Telescope Polarimeters
-    \end{list2}\vspace{-1.5mm}
+    \textbf{Colorado State University}, Fort Collins, CO \vspace{1mm}\\\vspace{1mm}%
+    \textsl{Doctor of Philosophy} \textsc{Ecology}\hfill \textbf{2014}\vspace{-3mm}\\\vspace{-1mm}%
+    
+    \textbf{Texas Tech University}, Lubbock, TX \vspace{1mm}\\\vspace{1mm}%
+    \textsl{Bachelor of Sciences} \textsc{Biology} \hfill \textbf{2006}\vspace{-3mm}\\\vspace{-1mm}%
+    
+     %__________________________________________________________________________________________________________________
+    % Professional Experience
+    \section{\mysidestyle Professional\\Experience}
+    \textbf{Utah State University, Dept. of Wildland Resources}, Logan, UT \hfill \textbf{2014 -- Pres.} \\
+		\textsl{Postdoctoral Fellow} \vspace{.5mm}\\
+    \textbf{Colorado State University, Natural Resource Ecology Lab}, Ft. Collins, CO \hfill \textbf{2011 -- 2014}\\
+		\textsl{Graduate Research Fellow}\vspace{.5mm}\\ 
+    \textbf{Colorado State University, Natural Resource Ecology Lab}, Ft. Collins, CO \hfill \textbf{2009 -- 2011}\\
+		\textsl{Graduate Research Assistant}\vspace{.5mm}\\ 
+     \textbf{USFS Rocky Mountain Research Station}, Ft. Collins, CO \hfill \textbf{2009}\\
+		\textsl{Research Assistant}\vspace{.5mm}\\ 		
+     \textbf{Colorado State University, FRWS}, Ft. Collins, CO \hfill \textbf{2008}\\
+		\textsl{Graduate Teaching Assistant}\\ 
 
     %__________________________________________________________________________________________________________________
     % Honors and Awards
-    \section{\mysidestyle Honors and\\Awards} 
-                Data Science Fellowship, Berkeley Institute for Data Science, UC Berkeley.    \hfill \textbf{2014--2016}\vspace{.5mm}\\%
-                Nuclear Science and Security Consortium Postdoctoral Fellowship, UC Berkeley. \hfill \textbf{2013--2016}\vspace{.5mm}\\%
-		DOE Office of Science Laboratory Graduate Appointment, Argonne National Lab.  \hfill \textbf{2011--2013}\vspace{.5mm}\\%
-		Roy G. Post Foundation Nuclear Waste Management Graduate Scholarship.               \hfill \textbf{2011}\vspace{.5mm}\\%
-		John Randall Memorial Scholarship, American Nuclear Society FCWMD.                  \hfill \textbf{2009}\vspace{.5mm}\\%
-		J.A. McDeavitt Scholarship, University of Chicago, Chicago, IL.                \hfill\textbf{2007--2008}\vspace{.5mm}\\%
-		University Scholar Award, University of Chicago, Chicago, IL.                  \hfill\textbf{2004--2008}\vspace{.5mm}\\%
-		Los Alamos Distinguished Student Performance Award, Los Alamos National Lab.                        \hfill\textbf{2004}%
+    \section{\mysidestyle Fellowships \\and Awards} 
+                NSF Postdoctoral Research Fellowship in Biology    \hfill \textbf{2014}\vspace{.5mm}\\%
+                1\textsuperscript{st} Place Oral Presentation, Front Range Student Ecology Symp.  \hfill \textbf{2013}\vspace{.5mm}\\%
+                NSF FORECAST Research Coordination Network Travel Award \hfill \textbf{2012}\vspace{.5mm}\\%
+                Sustainability Leadership Fellow, School of Global Environmental Sustainability, CSU \hfill \textbf{2012}\vspace{.5mm}\\%
+		NASA Earth and Space Science Graduate Fellowship  \hfill \textbf{2011}\vspace{.5mm}\\%
+		James E. Ellis Memorial Scholarship, Natural Resource Ecology Lab  \hfill \textbf{2010}\vspace{.5mm}\\%
+		NSF Graduate K-12 Fellowship, Natural Resource Ecology Lab                        \hfill\textbf{2009}%
+   
+   %__________________________________________________________________________________________________________________
+    % Refereed Journal Publications
+    \section{\mysidestyle Publications}
+     	\textbf{Tredennick, A.T.}, Hanan, N.P. Effects of tree harvest on the stable-state dynamics of savanna and forest. in revision at \textsl{American Naturalist}			\vspace{-6mm}\\%
+	
+	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography}\vspace{-6mm}\\%
+	
+	\textbf{Tredennick, A. T.}, L. P. Bentley, and N. P. Hanan. 2013. Allometric convergence in savanna trees and implications for the use of plant scaling models in 	variable ecosystems. \textsl{PLoS One} 8(3):e58241 \vspace{-6mm}\\%
+	
+	Rice, J., \textbf{Tredennick, A.T.}, and Joyce, L.. 2011. The climate of the Shoshone National Forest: A synthesis of past changes, future projections, and 			ecosystem implications. USDA National Forest Service General Technical Report 264 \vspace{-6mm}\\%
+	
+	Sutton, A.E., Dohn, J., Loyd, K., \textbf{Tredennick, A.T.}, Bucini, G., Solórzano, A, Prihodko, L. and Hanan, N.P. 2010. Does warming increase the risk of civil war 	in Africa? \textsl{Proceedings of the National Academy of Sciences} 107(25):E102 %
+  
+    \newpage
     %__________________________________________________________________________________________________________________
-    % Research Experience
-    \section{\mysidestyle Research\\Experience}
-    \textbf{University of California - Berkeley, NE Dept.}, Berkeley, CA \\
-		\textsl{Postdoctoral Scholar, Nuclear Science and Security Consortium} \hfill \textbf{Sept 2013 -- Present}\\
-		\textsl{Data Science Fellow, Berkeley Institute for Data Science} \hfill \textbf{Aug 2014 -- Present}\\
-                Developing computational tools and multiphysics models for advanced reactor safety analysis.
-
-    \textbf{Argonne National Laboratory}, Argonne, IL \hfill \textbf{June 2011 -- Aug 2013}\\
-		\textsl{Laboratory Graduate Research Appointee, Used Fuel Disposition Campaign}\\ 
-		Developed a used fuel disposition and generic repository computational model.
-
-    \textbf{University of Wisconsin - Madison, NEEP Dept.}, Madison, WI \hfill \textbf{June 2008 -- Aug 2013}\\
-		\textsl{Graduate Research Assistant, Computational Nuclear Engineering Research Group}\\ 
-		Developed and applied \Cyclus, a nuclear fuel cycle systems analysis tool.
-
-    \textbf{Idaho National Laboratory}, Idaho Falls, ID \hfill \textbf{June -- Aug 2010}\\
-		\textsl{Graduate Research Assistant, Systems Analysis Campaign}\\ 
-		Developed software functions and requirements for the Fuel Cycle Simulator concept.
-
-    \textbf{Kavli Institute For Cosmological Physics}, Chicago, IL \hfill \textbf{Jan 2005 -- June 2008}\\
-                \textsl{Research Assistant, Laboratory for Astrophysics and Space Research}\\
-                Programmed \& machined instrumentation. Planned protocol for QUIET polarimeter calibration.
-
-    \textbf{Universidad de Chile, Physics Dept.}, Santiago, Chile \hfill \textbf{June -- Sept 2006}\\
-                \textsl{Research Assistant, Chicago-Chile Research Exchange Program}\\
-                 Constructed and operated a far from equilibrium granular materials experiment.
-
-    \textbf{Los Alamos Neutron Science Center}, Los Alamos, NM \hfill \textbf{June -- Sept 2004}\\ 
-                \textsl{Research Assistant, LANSCE-3} \hfill \textbf{May -- Aug 2003}\\
-                Applied digital filtration algorithms and MCNPX models to experimental data.
-    \pagebreak
+    % Funding
+    \section{\mysidestyle Competitive\\Funding\\\textsl{\footnotesize External: \$297,000}\\\textsl{\footnotesize Internal: \$16,000}}
+    ``Diversity-stability relationships and coexistence: new theory and empirical tests", NSF Postdoctoral Research Fellowship in Biology, \$207,000 (2014-2017)\vspace{2mm}\\%
+    ``Effective Science Communication and Public Relations at NREL through EcoPress," Natural Resource Ecology Lab, \$6,000 (Co-I) (2013) \vspace{2mm}\\%
+    ``NESSF: Fuelwood, Savannas, and Climate Change: Integrating Modeling, Field Experimentation, and Optical and Radar Remote Sensing," NASA, \$90,000 (2011-2014) \vspace{2mm}\\%
+    ``Building a WCNR `Partnership for International Research and Education' in African Savannas: Undergraduate and Graduate Field-Based Education in Mali, West Africa," Warner College of Natural Resources, \$10,000 (PI--Hanan; collaborative proposal of the Hanan lab group) (2010)%
+    
     %__________________________________________________________________________________________________________________
     % Teaching Experience
-    \section{\mysidestyle Engineering\\Guest\\Lectures}
+    \section{\mysidestyle Teaching\\Experience}
 
-    \textbf{University of Wisconsin Dept. of Nuclear Engineering}, Madison, WI \hfill \textbf{Apr 1\&3, 2013}\\ 
-               \textsl{NE 571, Economic and Environmental Aspects of Nuclear Energy}\\
-               Nuclear Waste Repository Technology, Policy, and History
+    \textbf{Colorado State University} \hfill \textbf{2013}\\ 
+               \textsl{Plant Ecology}\\
+               Guest Lecture on Tree-Grass Coexistence
 
-    \textbf{Diablo Valley College Dept. of Engineering}, Diablo Valley, CA \hfill \textbf{Sept 9\&11, 2009}\\ 
-               \textsl{ENG 110, Introduction to Engineering}\\
-               Science, Computing, and the Future
+    \textbf{Colorado State University} \hfill \textbf{2012}\\ 
+               \textsl{NREL Skills for Undergraduate Participation in Ecological Research}\\
+               Data Analysis/Visualization Workshop Leader
 
-    \textbf{University of Wisconsin Dept. of Nuclear Engineering}, Madison, WI \hfill \textbf{Sept 9\&11, 2009}\\ 
-               \textsl{NE 406, Nuclear Reactor Analysis}\\
-               UNIX Shell, Basic Scripting, Environment Variables, Permissions, Regular Expressions, Makefiles 
+    \textbf{Colorado State University} \hfill \textbf{2011}\\ 
+               \textsl{RS 351, Ecosystem Processes in a Chaning World}\\
+               Co-Instructor 
+   
+    \textbf{Colorado State University} \hfill \textbf{2009, 2010, 2012}\\ 
+               \textsl{RS 351, Wildland Ecosystems}\\
+               Guest Lecture on Ecosystem Modeling
+               
+    \textbf{Irish Elementary School} Ft. Collins, CO \hfill \textbf{2010-2011}\\ 
+   		\textsl{5th and 4th Grade Science and Advanced Science Program}\\
+		NSF GK-12 Fellow
 
-    \textbf{University of Wisconsin Dept. of Nuclear Engineering} Madison, WI \hfill \textbf{Feb 10, 2010}\\ 
-               \textsl{NE 506, Practicum in Monte Carlo Radiation Transport}\\
-               UNIX Shell, Basic Scripting, Environment Variables, Permissions, Regular Expressions, Makefiles 
-
-    \section{\mysidestyle Scientific\\Computing\\Workshops}
-    \textbf{University of Split (invited)}, Split, Croatia \hfill \textbf{Sept 8--13, 2014}\\
-    G-Node Advanced Scientific Programming in Python Summer School
-               %UNIX Shell, Version Control, Databases, Scientific and Numerical Python
-
-    \textbf{Lawrence Berkeley National Laboratory}, Berkeley, CA \hfill \textbf{Apr 14--15, 2014}\\
-    Women in Science and Engineering Bootcamp
-               %UNIX Shell, Version Control, Databases, Scientific and Numerical Python
-
-    \textbf{SciPy Conference (invited)}, Austin, TX \hfill \textbf{Jun 25, 2013}\\
-    Version Control and Unit Testing For Scientific Software
-               %Version Control, Unit Testing
-
-    \textbf{University of Chicago, Graduate School (invited)}, Chicago, IL \hfill \textbf{Jan 12--13, 2013}\\
-    Computational Literacy Workshop
-               %UNIX Shell, Version Control, Databases, Python
-
-    \textbf{University of California, Berkeley (invited)}, Berkeley, CA \hfill \textbf{Oct 20--21, 2012}\\
-    Department of Statistics Scientific Computing Workshop
-               %UNIX Shell, Version Control, Databases, Python
-
-    \textbf{Lawrence Berkeley National Laboratory (invited)}, Berkeley, CA \hfill \textbf{Oct 17--18, 2012}\\
-    Software Carpentry Python Workshop
-               %Python, Nose, SciPy, NumPy, MatPlotLib
-
-    \textbf{The University of Chicago}, Chicago, IL \hfill \textbf{Apr 2--3, 2012}\\
-    Software Carpentry Scientific Computing Workshop
-               %UNIX Shell, Version Control, Databases
-
-    \textbf{International Center for Theoretical Physics (invited)}, Trieste, Italy \hfill \textbf{Feb 20--Mar 2, 2012}\\
-    UNESCO/IAEA Advanced School on Scientific Software Development
-               %Version Control, Python Basics, SciPy, NumPy, MatPlotLib, Fortran and C Binding with Python
-
-    \textbf{University of Toronto (invited)}, Toronto, ON, Canada \hfill \textbf{Nov 7--8, 2011}\\
-      SciNet Consortium For High Performance Computing Software Carpentry Bootcamp
-               %Version Control, Python, Testing, Auto-Documentation
-
-    \textbf{American Nuclear Society Winter Meeting (invited)}, Washington, D.C.  \hfill \textbf{Nov 1, 2011}\\
-    Young Professionals Congress Hacker Within Scientific Computing Tutorial
-               %Version Control, Testing, Auto-Documentation, Collaboration Tools
-
-    \textbf{Michigan State University (invited)}, East Lansing, MI \hfill \textbf{June 4--5, 2011}\\
-     Institute for Cyber Enabled Research (iCER) and BEACON Center THW Bootcamp
-               %UNIX Shell, Version Control, Text Editors, Databases, Auto-Documentation, Testing, Debugging
-
-    \textbf{The University of Wisconsin}, Madison, WI \hfill\textbf{Jan 12--14, 2011}\\
-    The Hacker Within Software Carpentry Bootcamp
-               %UNIX Shell, Version Control, Text Editors, Databases, Auto-Documentation, Testing, Debugging
-
-    \textbf{The University of Wisconsin}, Madison, WI \hfill \textbf{Jan 12--14, 2010}\\
-    The Hacker Within Python Bootcamp
-               %Data Structures, Flow Control, SciPy, NumPy, MatPlotLib, Fortran and C Binding with Python
-
-    \textbf{The University of Wisconsin}, Madison, WI \hfill \textbf{Mar 24--31, 2009}\\
-    The Hacker Within C++ Bootcamp
-               %Object Oriented Programming, Data Structures, C++ Basics
-
-    \textbf{The University of Wisconsin}, Madison, WI \hfill \textbf{Jan 12--15, 2009}\\
-    University of Wisconsin, Hacker Within UNIX Bootcamp
-               %UNIX Shell, Scripting, Environment, Permissions, Build Systems, Sed, Grep Awk, Common Utilities
-    \pagebreak
-    %__________________________________________________________________________________________________________________
-    % Computer Skills
-    %__________________________________________________________________________________________________________________
-    % Books YO!!! 
-    %           \vspace{-2mm}
-    %\section{\mysidestyle Books}
-    %  \begin{bibenum}
-    %  \textbf{Huff, K.}, Scopatz A. ``Effective Computation in Physics.'' Under contract with O'Reilly Media. November 2014. 
-    %  \end{bibenum}
-    %__________________________________________________________________________________________________________________
-    % Refereed Journal Publicationss
-    \section{\mysidestyle Journal\\Publications}
-    %\section{\mysidestyle Refereed\\Journal\\Publications} % also, vspace below
-      \begin{bibenum}
-       \item Aruliah,~D.A., Brown,~C.T., Chue Hong,~N.P., Davis,~M., Guy,~R.T., 
-          Haddock,~S.H.D., \textbf{Huff,~K.}, Mitchell,~I., Plumbley,~M., Waugh,~B., 
-          White,~E.P., Wilson,~G.V., and Wilson,~P.P.H.  ``Best Practices For 
-          Scientific Computing.'' \textsl{PLOS Biology}, Vol 1, Issue 12, 
-          2014.\\ http://dx.doi.org/10.1371/journal.pbio.1001745.
-       \item Clerc, M., Dunstan, J., \textbf{Huff K.}, Mujica, N., Varas, G. 
-          ``Liquid-Solid-Like Transition in Quasi-One-Dimensional Driven 
-          Granular Media '',  \textsl{Nature Physics}, Vol 4, 249 - 254, 2008.
-      \end{bibenum}
-      %\vspace{2mm} % add this back if you return to Refereed Journal..
-    %__________________________________________________________________________________________________________________
-    % Referreed Conference Publications
-    % 		\vspace{-2mm}
-    \section{\mysidestyle Refereed\\Conference\\Publications}
-    \begin{bibenum} 
-      \item Krumwiede, D.L., Andreades, C., Choi, J.K., Cisneros, A.T., Huddar, L.,
-         \textbf{Huff K.}, Laufer, M.D., Munk, M., Scarlat, R.O., Seifried, J.E.,
-         Zweibaum, N., Greenspan, E., and Peterson, P.F.  ``Design of the Mark-I
-         Pebble-Bed, Fluoride-Salt-Cooled, High-Temperature Reactor Commercial Power
-         Plant,'' Paper 14231.  \emph{Proceedings of ICAPP}, Charlotte, NC. April 2014.  
-      \item \textbf{Huff K.} ``Cyclus Fuel Cycle Simulation Capabilities with the Cyder Disposal System Model,'' Paper 7730.
-         \emph{Proceedings of Global}, Salt Lake City, UT. October 2013. 
-      \item Gidden, M., Wilson, P., \textbf{Huff K.}, Carlsen, R. ``An Agent-Based Framework for Fuel Cycle Simulation with Recycling,'' Paper 7737.
-         \emph{Proceedings of Global}, Salt Lake City, UT. October 2013. 
-      \item \textbf{Huff K.}, Nutt, M. ``Hydrologic Nuclide Transport Models in Cyder, a Geologic Disposal Software Library,'' Paper 13328.
-         \emph{Proceedings of the Waste Management Symposium}, Phoenix, AZ.  February 2013. 
-      \item Oliver, K.M., Wilson, P.P.H., Reveillere, A., \textbf{Huff K.} ``Studying international fuel cycle robustness with the GENIUSv2 discrete 
-          facilities/materials fuel cycle systems analysis tool	'', Paper 9166. 
-          \emph{Proceedings of Global}, Paris, France. 2009.
-      \item Rochman, D., Haight, R. C., Wender, S. A., O'Donnell, J. M., 
-        Michaudon, A., \textbf{Huff, K.}, Vieira, D. J., Bond, E., Rundberg, R.S., 
-        Kronenberg, A., Wilhelmy, J., Bredeweg, T. A., Schwantes, J., Ethvignot, T., 
-        Granier, T., Petit, M., Danon, Y. 
-        ``First Measurements with a Lead Slowing-Down Spectrometer at LANSCE,'' 
-        \emph{AIP Conference Proceedings, International Conference on Nuclear 
-        Data for Science and Technology.} Volume 769. 2005.
-          % [paper]
-    \end{bibenum}
-    %__________________________________________________________________________________________________________________
-    % Submitted Journal Publications
-    % 		\vspace{-2mm}
-    %\section{\mysidestyle Submitted\\Journal\\Publications}
-    %            Submitted Journal Publications \vspace{-2mm}\\\vspace{-3mm}%
-    %__________________________________________________________________________________________________________________
-    % Conference Publications
-    \section{\mysidestyle Conference\\Publications}
-    \begin{bibenum}
-      \item \textbf{Huff K.}, Fratoni, M., Greenberg, H. ``Extensions to the CYCLUS Ecosystem in Support of Market-Driven Transition Capability''
-         \emph{Transactions of the American Nuclear Society Winter Conference.} 
-         Anaheim, CA. November 2014.
-      \item Bates, C., Biondo, E., \textbf{Huff, K.}, Kiesling, K., Scopatz, A. ``PyNE Progress Report''
-         \emph{Transactions of the American Nuclear Society Winter Conference.} 
-         Anaheim, CA. November 2014.
-      \item \textbf{Huff K.}, Fratoni, M., Greenberg, H. ``Extensions to the CYCLUS Ecosystem in Support of Market-Driven Transition Capability''
-         \emph{Transactions of the American Nuclear Society Winter Conference.} 
-         Anaheim, CA. November 2014.
-      \item \textbf{Huff K.}, Bara, A. ``Dynamic Determination of Thermal Repository Capacity For Fuel Cycle Analysis.''
-         \emph{Transactions of the American Nuclear Society Annual Conference.} 
-         Atlanta, GA. June 2013.
-      \item \textbf{Huff K.}, Nutt, M. ``Key Processes and Parameters in a Generic Clay Disposal System Model.''
-         \emph{Transactions of the American Nuclear Society Winter Conference.} 
-        San Diego, CA. November 2012.
-        % [paper][talk]
-      \item Scopatz, A.M., Romano, P.K., Wilson, P.P.H., \textbf{Huff K.} ``PyNE: Python For Nuclear Engineering.''
-         \emph{Transactions of the American Nuclear Society Winter Conference.} 
-        San Diego, CA. November 2012. 
-        % [paper][talk]
-      \item \textbf{Huff K.}, Bauer, T. ``Numerical Calibration of an Analytical Generic Nuclear Repository Heat Transfer Model.''
-         \emph{Transactions of the American Nuclear Society Annual Conference.} 
-        Chicago, IL. June 2012.
-        % [paper][talk]
-      \item \textbf{Huff K.}, Gidden, M., Wilson, P.P.H. ``Open architecture and modular paradigm of \Cyclus, a fuel cycle simulation code.''
-         \emph{Transactions of the American Nuclear Society Annual Conference.} 
-        Hollywood, FL. June 2011.
-        % [paper][talk]
-      \item \textbf{Huff K.}, Scopatz, A., Preston, N., Wilson, P.P.H. ``Rapid Peer Education of a Computational Nuclear Engineering Skill Suite.'' 
-         \emph{Transactions of the American Nuclear Society Annual Conference.} 
-        Hollywood, FL. June 2011.
-        % [paper][talk]
-      \pagebreak
-      \item \textbf{Huff K.} ``\Cyclus: An Open, Modular, Next Generation Fuel Cycle Simulator Platform. ''
-        (poster)  \emph{Waste Management Symposium.} Phoenix, AZ. March 
-        2011.
-        % [poster][award]
-      \item \textbf{Huff K.}, ``MOX Fuel Recipe Approximation Tests in GENIUSv2. ''
-         \emph{Proceedings of the American Nuclear Society Student Conference.} 
-        Ypsilanti, MI. April 2010.
-        % [paper][talk]
-      \item \textbf{Huff K.}, Oliver, K., Wilson, P.P.H. ``GENIUSv2 Discrete Facilities/Materials Modeling of International 
-        Fuel Cycle Robustness. ''
-         \emph{Transactions of the American Nuclear Society Winter Conference.} 
-        Washington D.C. November 2009. 
-        % [paper][talk]
-      \item \textbf{Huff K.}, Wilson, P.P.H., Oliver, K. ``GENIUS Version 2: Modelling the Worldwide Nuclear Fuel Cycle.'' 
-        (poster)  \emph{eHub Conference.} University of Wisconsin - 
-        Madison. November 2009.
-        % [poster]
-    \end{bibenum}
-
-    %__________________________________________________________________________________________________________________
-    % Technical Reports 
-    %__________________________________________________________________________________________________________________
-    % Software Products
-    \section{\mysidestyle Software\\Products}
-    \begin{bibenum}
-      \item Carlsen, R., Gidden, M. \textbf{Huff, K.}, Opotowsky, A., Rakhimov, O., Scopatz, A., Welch, Z., Wilson, P. ``Cyclus v1.0.0.'' \emph{figshare.} 
-http://dx.doi.org/10.6084/m9.figshare.1041745. June 2014.
-      \item Carlsen, R., Gidden, M. \textbf{Huff, K.}, Opotowsky, A., Rakhimov, O., Scopatz, A., Welch, Z., Wilson, P. ``Cycamore v1.0.0.'' \emph{figshare.} 
-http://dx.doi.org/10.6084/m9.figshare.1041829. June 2014.
-    \end{bibenum}
-    \section{\mysidestyle Technical\\Reports}
-    \begin{bibenum}
-      \item \textbf{Huff K.}, Nutt, W.M. ``FY12 Sensitivity Studies Using the UFD Clay Generic Disposal System Model.'' 
-        \emph{Argonne National Laboratory}. July 2012.
-      \item \textbf{Huff K.}, Bauer, T.H. ``Benchmarking a New Closed-Form Thermal Analysis Technique Against a Traditional
-        Lumped Parameter, Finite-Difference Method'' \emph{Argonne National Laboratory}. (FCRD-UFD-2012-000142). July 2012.
-      \item \textbf{Huff K.}, Dixon, B., Braase, L. ``Next Generation Fuel Cycle Simulator Functions and Requirements Document.'' 
-        \emph{Idaho National Laboratory} (FCRD-SYSA-2010-000110). July 2010. 
-        % [paper]
-      \item \textbf{Huff K.} ``Digital Filtering Application to the Lead Slowing Down 
-        Spectrometer.'' Los Alamos Neutron Science Center. August 2004.  %[paper][talk][award]
-        (\emph{awarded los alamos distinguished student award.}) 
-      \item \textbf{Huff K.} ``Excess Single Event Effects in the Second Chip of a Series.'' 
-        Los Alamos Neutron Science Center. August 2003. 
-        %[paper][talk]
-    \end{bibenum}
-    %__________________________________________________________________________________________________________________
-    % Other Publications
-    \section{\mysidestyle Other\\Publications}
-    \begin{bibenum}
-      \item \textbf{Huff K.} An Integrated Used Fuel Disposition and Generic Repository Model for Fuel Cycle Analysis. 
-        Ph.D. Dissertation--Nuclear Engineering and Engineering 
-        Physics. University of Wisconsin -- Madison.  August 2013. 
-      \item \textbf{Huff K.} An Integrated Used Fuel Disposition and Generic Repository Model. 
-        Ph.D. Preliminary Examination--Nuclear Engineering and Engineering 
-        Physics. University of Wisconsin -- Madison.  September 2011. 
-      \item \textbf{Huff K.} ``Celestial Calibrations of the Quiet Telescope.''
-        Undergraduate Honors Thesis. University of Chicago. June 2008.
-        % [paper][talk]
-      \item Biris, O., Gracey, K., \textbf{Huff K.}, Ng, W.K.  
-        ``An Analysis of the Consolidated Fuel Treatment Center Nuclear 
-        Reprocessing Initiative.''
-        \emph{Big Problems Energy Seminar. University of Chicago.} June 2008.
-    \end{bibenum}
-
-    \vspace{5mm}
-    \section{\mysidestyle Scientific\\Computing\\Skills} 
-                \textbf{Languages} \hfill bash/csh, C++, FORTRAN, Perl, Python, XML.\vspace{.5mm}\\%
-                \textbf{Build Systems} \hfill make, CMake, automake.\vspace{.5mm}\\%
-                \textbf{Databases} \hfill HDF5, SQL.\vspace{.5mm}\\%
-                \textbf{Test Frameworks} \hfill CTest, GoogleTest, nose.\vspace{.5mm}\\%
-                \textbf{Version Control} \hfill cvs, git, hg, svn.\vspace{.5mm}\\%
-                \textbf{Other Tools} \hfill Doxygen, Sphinx, GoldSim, \LaTeX, MathCAD, Mathematica, MatLab, MCNP.\vspace{.5mm}\\%
-
-    %__________________________________________________________________________________________________________________
-    % Professional, Student Organizations
-    \section{\mysidestyle Professional\\Service}
-		\textbf{Board Member}, Software Carpentry. \hfill \textbf{2014--present}\vspace{.5mm}\\%
-		\textbf{Secretary--Treasurer}, Fuel Cycle \& Waste Management Division, ANS. \hfill \textbf{2013--2015}\vspace{.5mm}\\%
-		\textbf{Secretary}, Young Members Group, ANS. \hfill \textbf{2013--2014}\vspace{.5mm}\\%
-		\textbf{Technical Program Co-Chair}, SciPy, Scientific Python Conference.  \hfill \textbf{2013--2014}\vspace{.5mm}\\%
-		\textbf{Member}, Next Generation Leadership Committee, Waste Management Symposium. \hfill \textbf{2013--2014}\vspace{.5mm}\\%
-		\textbf{Moderator, Organizer, Panelist}, inSCIght Scientific Computing Podcast. \hfill \textbf{2011--2013}\vspace{.5mm}\\%
-		\textbf{Editor}, Proceedings of SciPy Scientific Python Conference.  \hfill \textbf{2013}\vspace{.5mm}\\%
-		\textbf{Co-Founder}, Nuclear Pride, LGBTQA Organization. \hfill \textbf{2011--2013}\vspace{.5mm}\\%
-		\textbf{Co-Founder, Treasurer, President}, Hacker Within Scientific Computing Group. \hfill \textbf{2008--2011}\vspace{.5mm}\\%
-		\textbf{Governor, Treasurer}, University of Wisconsin ANS student section. \hfill \textbf{2008--2010}\vspace{.5mm}\\%
-    %__________________________________________________________________________________________________________________
-    % References
-
-\section{\mysidestyle References} 
-\texsl{Available upon request}
-%  \begin{tabular}{@{}p{6cm}p{6cm}}
-%    \textbf{Professor Paul P.H. Wilson}    &  \textbf{Mark Nutt, PhD}
-%	\\
-%  Professor of Nuclear Engineering        &  Group Leader, Waste Management
-%	\\
-%  University of Wisconsin - Madison      &  Argonne National Laboratory           
-%	\\
-%  Madison, Wisconsin                      &  Argonne, Illinois  
-%	\\
-%  phone: \textsl{(608)263-0807}           &  phone: \textsl{(630) 252-8387}   
-%	\\
-%  e-mail: \textsl{wilsonp@engr.wisc.edu}  &  e-mail: \textsl{wnutt@anl.gov}  
-%	\\
-%  \end{tabular}
-  
-%  \begin{tabular}{@{}p{6cm}p{6cm}}
-%  \textbf{Brent Dixon}              &  %\textbf{Professor Douglass Henderson}       
-%	\\
-%  Fuel Cycle Options Campaign            &  %Professor of Nuclear Engineering                   
-%	\\
-%  Idaho National Laboratory              &  %University of Wisconsin Madison                  
-%	\\
-%  Idaho Falls, Idaho                     &  %Madison, Wisconsin          
-%	\\
-%  e-mail: \textsl{available upon request}   &  e-mail: \textsl{available upon request}    
-%	\\
-%  phone: \textsl{available upon request}           &  phone: \textsl{available on request}   
-%	\\
-%  \end{tabular}
-
-%  \begin{tabular}{@{}p{6cm}p{6cm}}
-%  \textbf{Bruce Takala, PhD}              & \\
-%  Accelerator Operations Manager          &  \\
-%  Los Alamos Neutron Science Center       &  \\
-%  Los Alamos, New Mexico                  &  \\
-%%  phone: \textsl{available upon request}  &\\ 
-%  e-mail: \textsl{available upon request}   & \\
-  \end{tabular}
-  
+     \textbf{Colorado State University} \hfill \textbf{2008}\\ 
+               \textsl{RS 351, Wildland Ecosystems}\\
+               Graduate Teaching Assistant 
+               
 %______________________________________________________________________________________________________________________
 \end{resume}
 \end{document}
