updated with service

--- a/cv.tex
+++ b/cv.tex
@@ -1,6 +1,6 @@
 
 %______________________________________________________________________________________________________________________
-% @brief    LaTeX2e Resume for Kathryn D. Huff
+% @brief    LaTeX2e Resume for Andrew T. Tredennick
 \documentclass[margin,line]{resume}
 
 \newcommand{\Cyclus}{\textsc{Cyclus }}
@@ -39,7 +39,7 @@
     
      %__________________________________________________________________________________________________________________
     % Professional Experience
-    \section{\mysidestyle Professional\\Experience}
+    \section{\mysidestyle Professional\\Appointments}
     \textbf{Utah State University, Dept. of Wildland Resources}, Logan, UT \hfill \textbf{2014 -- Pres.} \\
 		\textsl{Postdoctoral Fellow} \vspace{.5mm}\\
     \textbf{Colorado State University, Natural Resource Ecology Lab}, Ft. Collins, CO \hfill \textbf{2011 -- 2014}\\
@@ -87,19 +87,18 @@
     %__________________________________________________________________________________________________________________
     % Teaching Experience
     \section{\mysidestyle Teaching\\Experience}
-
-    \textbf{Colorado State University} \hfill \textbf{2013}\\ 
+    \textbf{Colorado State University} \hfill \textbf{2013}\\
                \textsl{Plant Ecology}\\
                Guest Lecture on Tree-Grass Coexistence
-
+               
     \textbf{Colorado State University} \hfill \textbf{2012}\\ 
                \textsl{NREL Skills for Undergraduate Participation in Ecological Research}\\
                Data Analysis/Visualization Workshop Leader
-
+               
     \textbf{Colorado State University} \hfill \textbf{2011}\\ 
-               \textsl{RS 351, Ecosystem Processes in a Chaning World}\\
+               \textsl{RS 351, Ecosystem Processes in a Changing World}\\
                Co-Instructor 
-   
+               
     \textbf{Colorado State University} \hfill \textbf{2009, 2010, 2012}\\ 
                \textsl{RS 351, Wildland Ecosystems}\\
                Guest Lecture on Ecosystem Modeling
@@ -107,10 +106,37 @@
     \textbf{Irish Elementary School} Ft. Collins, CO \hfill \textbf{2010-2011}\\ 
    		\textsl{5th and 4th Grade Science and Advanced Science Program}\\
 		NSF GK-12 Fellow
-
+		
      \textbf{Colorado State University} \hfill \textbf{2008}\\ 
                \textsl{RS 351, Wildland Ecosystems}\\
                Graduate Teaching Assistant 
+
+%__________________________________________________________________________________________________________________
+    % Service
+    \section{\mysidestyle Professional\\Service}
+    \textbf{Reviewer}\\
+    	\textsl{Proceedings of the National Academy of Sciences};
+	\textsl{Ecology};
+	\textsl{Ecological Applications};
+	\textsl{Forest Ecology and Management};
+	\textsl{PLoS One};
+	\textsl{Agriculture, Ecosystems, and Environment};
+	\textsl{Environmental Management};
+	\textsl{National Research Foundation, South Africa}
+	
+   \textbf{University Service and Public Outreach}\\
+   	Director of Social Media, \textsl{NREL EcoPress}\\
+	Student Review Committee, New Ecology Faculty Search, CSU\\
+	Organizing Committee, Global Savanna Workshop, CSU\\
+	Advertising and Outreach Committee, Front Range Student Ecology Symposium\\
+	Graduate Student Representative, Natural Resource Ecology Lab
+	
+    \textbf{Professional Society Membership}\\
+    	Ecological Society of America\\
+	American Society of Naturalists
+	
+    \textbf{Other Leadership Activities}\\
+    	Co-organizer, \textsl{Data Visualization in R}, ESA 2013 and 2014 Workshop
                
 %______________________________________________________________________________________________________________________
 \end{resume}
