updated AmNat pub

--- a/cv.tex
+++ b/cv.tex
@@ -65,7 +65,7 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
     \section{\mysidestyle Publications}
-     	\textbf{Tredennick, A.T.}, Hanan, N.P. Effects of tree harvest on the stable-state dynamics of savanna and forest. in revision at \textsl{American Naturalist}			\vspace{-6mm}\\%
+     	\textbf{Tredennick, A.T.}, Hanan, N.P. in press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{American Naturalist}			\vspace{-6mm}\\%
 	
 	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography}\vspace{-6mm}\\%
 	
