--- a/cv.tex
+++ b/cv.tex
@@ -65,15 +65,15 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
     \section{\mysidestyle Publications}
-     	\textbf{Tredennick, A.T.}, Hanan, N.P. in press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{American Naturalist}			\vspace{-6mm}\\%
+     	\textbf{Tredennick, A.T.}, Hanan, N.P. in press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{American Naturalist} (open access) \vspace{-6mm} \\%
 	
-	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography}\vspace{-6mm}\\%
+	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography} (open access)\vspace{-6mm}\\%
 	
-	\textbf{Tredennick, A. T.}, L. P. Bentley, and N. P. Hanan. 2013. Allometric convergence in savanna trees and implications for the use of plant scaling models in 	variable ecosystems. \textsl{PLoS One} 8(3):e58241 \vspace{-6mm}\\%
+	\textbf{Tredennick, A. T.}, L. P. Bentley, and N. P. Hanan. 2013. Allometric convergence in savanna trees and implications for the use of plant scaling models in 	variable ecosystems. \textsl{PLoS One} 8(3):e58241 (open access)\vspace{-6mm}\\%
 	
 	Rice, J., \textbf{Tredennick, A.T.}, and Joyce, L.. 2011. The climate of the Shoshone National Forest: A synthesis of past changes, future projections, and 			ecosystem implications. USDA National Forest Service General Technical Report 264 \vspace{-6mm}\\%
 	
-	Sutton, A.E., Dohn, J., Loyd, K., \textbf{Tredennick, A.T.}, Bucini, G., Solórzano, A, Prihodko, L. and Hanan, N.P. 2010. Does warming increase the risk of civil war 	in Africa? \textsl{Proceedings of the National Academy of Sciences} 107(25):E102 %
+	Sutton, A.E., Dohn, J., Loyd, K., \textbf{Tredennick, A.T.}, Bucini, G., Solórzano, A, Prihodko, L. and Hanan, N.P. 2010. Does warming increase the risk of civil war 	in Africa? \textsl{Proceedings of the National Academy of Sciences} 107(25):E102 (open access) %
   
     \newpage
     %__________________________________________________________________________________________________________________
@@ -83,6 +83,13 @@
     ``Effective Science Communication and Public Relations at NREL through EcoPress," Natural Resource Ecology Lab, \$6,000 (Co-I) (2013) \vspace{2mm}\\%
     ``NESSF: Fuelwood, Savannas, and Climate Change: Integrating Modeling, Field Experimentation, and Optical and Radar Remote Sensing," NASA, \$90,000 (2011-2014) \vspace{2mm}\\%
     ``Building a WCNR `Partnership for International Research and Education' in African Savannas: Undergraduate and Graduate Field-Based Education in Mali, West Africa," Warner College of Natural Resources, \$10,000 (PI--Hanan; collaborative proposal of the Hanan lab group) (2010)%
+    
+     %__________________________________________________________________________________________________________________
+    % Data products
+    \section{\mysidestyle Data\\Products}
+    Tredennick AT, Bentley LP, Hanan NP (2013) Data from: Allometric convergence in savanna trees and implications for plant scaling models in variable ecosystems. Dryad Digital Repository. \\ http://dx.doi.org/10.5061/dryad.4s1d2 \vspace{-6mm}\\%
+    
+    Tredennick AT, Hanan NP, Martinez K, Keita, L (2014) Data from: Effects of tree harvest on the stable-state dynamics of savanna and forest. Dryad Digital Repository. \\ http://dx.doi.org/
     
     %__________________________________________________________________________________________________________________
     % Teaching Experience
