--- a/cv.tex
+++ b/cv.tex
@@ -73,7 +73,7 @@
 	
 	Rice, J., \textbf{Tredennick, A.T.}, and Joyce, L.. 2011. The climate of the Shoshone National Forest: A synthesis of past changes, future projections, and 			ecosystem implications. USDA National Forest Service General Technical Report 264 \vspace{-6mm}\\%
 	
-	Sutton, A.E., Dohn, J., Loyd, K., \textbf{Tredennick, A.T.}, Bucini, G., Solórzano, A, Prihodko, L. and Hanan, N.P. 2010. Does warming increase the risk of civil war 	in Africa? \textsl{Proceedings of the National Academy of Sciences} 107(25):E102 (open access) %
+	Sutton, A.E., Dohn, J., Loyd, K., \textbf{Tredennick, A.T.}, Bucini, G., Solï¿½rzano, A, Prihodko, L. and Hanan, N.P. 2010. Does warming increase the risk of civil war 	in Africa? \textsl{Proceedings of the National Academy of Sciences} 107(25):E102 (open access) %
   
     \newpage
     %__________________________________________________________________________________________________________________
@@ -89,7 +89,7 @@
     \section{\mysidestyle Data\\Products}
     Tredennick AT, Bentley LP, Hanan NP (2013) Data from: Allometric convergence in savanna trees and implications for plant scaling models in variable ecosystems. Dryad Digital Repository. \\ http://dx.doi.org/10.5061/dryad.4s1d2 \vspace{-6mm}\\%
     
-    Tredennick AT, Hanan NP, Martinez K, Keita, L (2014) Data from: Effects of tree harvest on the stable-state dynamics of savanna and forest. Dryad Digital Repository. \\ http://dx.doi.org/
+    Tredennick AT, Hanan NP, Martinez K, Keita, L (2014) Data from: Effects of tree harvest on the stable-state dynamics of savanna and forest. Dryad Digital Repository. \\ http://dx.doi.org/10.5061/dryad.vg121
     
     %__________________________________________________________________________________________________________________
     % Teaching Experience
