updated cv with presentations

--- a/cv.tex
+++ b/cv.tex
@@ -138,13 +138,27 @@
 	Advertising and Outreach Committee, Front Range Student Ecology Symposium\\
 	Graduate Student Representative, Natural Resource Ecology Lab
 	
+  \newpage
+  
     \textbf{Professional Society Membership}\\
     	Ecological Society of America\\
 	American Society of Naturalists
 	
     \textbf{Other Leadership Activities}\\
     	Co-organizer, \textsl{Data Visualization in R}, ESA 2013 and 2014 Workshop
-               
+
+%__________________________________________________________________________________________________________________
+    % Presentations
+    \section{\mysidestyle Select\\Presentations}
+    ``Forecasting climate change impacts on plant population dynamics at large spatial extents: a test case with sagebrush (\emph{Artemisia}) species." 2014 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
+    
+    ``The sustainability and biome-level impacts of fuelwood harvesting in sub-Saharan Africa.'' Invited seminar, Geospatial Science Center of Excellence, South Dakota State University.\vspace{-6mm}\\%
+    
+    ``Tree harvest, fire, and drought can drive state transitions in savanna.'' 2013 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
+    
+    ``Using diverse multi-scale data to assess patterns and sustainability of fuelwood harvest in sub-Saharan Africa.'' 2012 NSF FORECAST RCN Meeting.\\
+    
+
 %______________________________________________________________________________________________________________________
 \end{resume}
 \end{document}
