--- a/cv.tex
+++ b/cv.tex
@@ -64,7 +64,10 @@
    
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
-    \section{\mysidestyle Publications}
+     \section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
+        \textbf{Tredennick, A.T.}, Karembe, M., Dembele, F., Dohn, J., and Hanan, N.P. In Review. Weak effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. (preprint: )
+        
+    \section{\mysidestyle Publications\\ \textsl{\footnotesize in press}\\ \textsl{\footnotesize and published}}     
      	\textbf{Tredennick, A.T.}, Hanan, N.P. in press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{American Naturalist} (open access) \vspace{-6mm} \\%
 	
 	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography} (open access)\vspace{-6mm}\\%
