change NREL hyperlink

--- a/cv.tex
+++ b/cv.tex
@@ -148,7 +148,7 @@
   \newpage
 \section{\mysidestyle Professional\\Service\\ \textsl{\footnotesize continued}}
    \textbf{University Service and Public Outreach}\\
-   	Director of Social Media, \textsl{NREL EcoPress}\footnote{http://nrelscience.org} (2012-2013)\\
+   	Director of Social Media, \textsl{NREL EcoPress}: http://nrelscience.org (2012-2013)\\
 	Student Review Committee, New Ecology Faculty Search, CSU (2011)\\
 	Organizing Committee, Global Savanna Workshop, CSU (2009)\\
 	Advertising and Outreach Committee, Front Range Student Ecology Symposium (2010)\\
@@ -157,7 +157,7 @@
 %__________________________________________________________________________________________________________________
     % Presentations
     \section{\mysidestyle Select\\Presentations\\ \textsl{\footnotesize First-author only}}
-    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2014) ``Africa's Fuelwood Footprint and the Biome-Level Impacts of Tree Harvest,'' Station d'Ecologie Expérimentale du CNRS, Moulis, France. \vspace{-6mm}\\% 
+    Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2014) ``Africa's Fuelwood Footprint and the Biome-Level Impacts of Tree Harvest,'' Station d'Ecologie Exp?rimentale du CNRS, Moulis, France. \vspace{-6mm}\\% 
     
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2014) ``Forecasting climate change impacts on plant population dynamics at large spatial extents: a test case with sagebrush (\emph{Artemisia}) species.'' 2014 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
     
