--- a/cv.tex
+++ b/cv.tex
@@ -67,7 +67,7 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
      \section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-        \textbf{Tredennick, A.T.}, Karembe, M., Dembele, F., Dohn, J., and Hanan, N.P. In Review. Weak effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. (preprint: )
+        \textbf{Tredennick, A.T.}, Karemb\'{e}, M., Demb\'{e}l\'{e}, F., Dohn, J., and Hanan, N.P. In Review. Weak effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. (preprint available here: \href{http://peerj.com/ATredennick/}{http://peerj.com/ATredennick/})
         
     \section{\mysidestyle Publications\\ \textsl{\footnotesize in press}\\ \textsl{\footnotesize and published}}     
      	\textbf{Tredennick, A.T.}, Hanan, N.P. In Press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{The American Naturalist} (open access) \vspace{-6mm} \\%
@@ -83,10 +83,11 @@
     \newpage
     %__________________________________________________________________________________________________________________
     % Funding
-    \section{\mysidestyle Competitive\\Funding\\\textsl{\footnotesize External: \$297,000}\\\textsl{\footnotesize Internal: \$16,000}}
+    \section{\mysidestyle Competitive\\Funding\\\textsl{\footnotesize External: \$297,000}\\\textsl{\footnotesize Internal: \$17,500}}
     ``Diversity-Stability Relationships and Coexistence: New Theory and Empirical Tests," NSF Postdoctoral Research Fellowship in Biology and Mathematics, \$207,000 (2014-2017)\vspace{2mm}\\%
     ``Effective Science Communication and Public Relations at NREL through EcoPress," Natural Resource Ecology Lab, \$6,000 (Co-I) (2013) \vspace{2mm}\\%
     ``NESSF: Fuelwood, Savannas, and Climate Change: Integrating Modeling, Field Experimentation, and Optical and Radar Remote Sensing," NASA, \$90,000 (2011-2014) \vspace{2mm}\\%
+    ``Expanding Ecology to Meet Society: Traditional Experiments Coupled with Anthropological Methods in a Savanna Socio-Ecological System,'' Natural Resource Ecology Laboratory James E. Ellis Memorial Scholarship, \$1,500 (2010)\vspace{2mm}\\%
     ``Building a WCNR `Partnership for International Research and Education' in African Savannas: Undergraduate and Graduate Field-Based Education in Mali, West Africa," Warner College of Natural Resources, \$10,000 (PI--Hanan; collaborative proposal of the Hanan lab group) (2010)%
     
      %__________________________________________________________________________________________________________________
