updated "2nd" format

--- a/cv.tex
+++ b/cv.tex
@@ -185,7 +185,7 @@
     
     Tredennick, A.T., Hanan, N.P., Bucini, G., Parton, W., and Keogh, C. (2011) ``Spatially Quantifying Fuelwood Demand and Production in Sub-Saharan Africa,'' NREL Spring Seminar Series: New Voices in Ecology, Colorado State University.\vspace{-6mm}\\%
     
-    Tredennick, A.T. and Hanan N.P. (2011) ``Allometric Scaling in Savannas: Do the Non-conformists Conform to Ecological Theory?,'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 2\textsuperscript{st} Place Oral Presentation}.\vspace{-6mm}\\%
+    Tredennick, A.T. and Hanan N.P. (2011) ``Allometric Scaling in Savannas: Do the Non-conformists Conform to Ecological Theory?,'' Front Range Student Ecology Symposium, Colorado State University. \textsl{Awarded 2\textsuperscript{nd} Place Oral Presentation}.\vspace{-6mm}\\%
   
   Tredennick, A.T. and Coughenour, M.B. (2009) ``Economic Incentives for Conservation in Meru, Kenya,'' Poster Presentation, Front Range Student Ecology Symposium, Colorado State University.
 
