updated reviewer journal list

--- a/cv.tex
+++ b/cv.tex
@@ -134,10 +134,12 @@
     \section{\mysidestyle Professional\\Service}
     \textbf{Reviewer}\\
     	\textsl{Proceedings of the National Academy of Sciences};
-	\textsl{Ecology};
+	\textsl{Ecology Letters};
+  \textsl{Ecology};
 	\textsl{Ecological Applications};
+  \textsl{Elementa};
+  \textsl{PLoS One};
 	\textsl{Forest Ecology and Management};
-	\textsl{PLoS One};
 	\textsl{Agriculture, Ecosystems, and Environment};
 	\textsl{Environmental Management};
 	\textsl{National Research Foundation, South Africa}
