--- a/cv.tex
+++ b/cv.tex
@@ -72,7 +72,7 @@
         \textbf{Tredennick, A.T.}, Karemb\'{e}, M., Demb\'{e}l\'{e}, F., Dohn, J., and Hanan, N.P. In Review. Weak effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. (preprint available here: \href{http://peerj.com/ATredennick/}{http://peerj.com/ATredennick/})
         
     \section{\mysidestyle Publications\\ \textsl{\footnotesize in press}\\ \textsl{\footnotesize and published}}     
-     	\textbf{Tredennick, A.T.}, Hanan, N.P. In Press. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{The American Naturalist} (open access) \vspace{-6mm} \\%
+     	\textbf{Tredennick, A.T.}, Hanan, N.P. 2015. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{The American Naturalist} (open access: \href{http://www.jstor.org/stable/info/10.1086/680475}{http://www.jstor.org/stable/info/10.1086/680475}) \vspace{-6mm} \\%
 	
 	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography} 23(3):259-263 (open access: \href{http://dx.doi.org/10.1111/geb.12122}{http://dx.doi.org/10.1111/geb.12122}) \vspace{-6mm}\\%
 	
