moves GEB response to published section

--- a/cv.tex
+++ b/cv.tex
@@ -67,11 +67,11 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
      \section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in review}}
-     	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J. In Review. Analysis of stable states in global savannas -- a response to Staver and Hansen. \textsl{Global Ecology and Biogeography} \vspace{-6mm}\\%
-	
         \textbf{Tredennick, A.T.}, Karemb\'{e}, M., Demb\'{e}l\'{e}, F., Dohn, J., and Hanan, N.P. In Review. Weak effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. (preprint available here: \href{http://peerj.com/ATredennick/}{http://peerj.com/ATredennick/})
         
     \section{\mysidestyle Publications\\ \textsl{\footnotesize in press}\\ \textsl{\footnotesize and published}}     
+    Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J. In Review. Analysis of stable states in global savannas -- a response to Staver and Hansen. \textsl{Global Ecology and Biogeography} (open access: \href{http://dx.doi.org/10.1111/geb.12321}{http://dx.doi.org/10.1111/geb.12321}) \vspace{-6mm}\\%
+    
      	\textbf{Tredennick, A.T.}, Hanan, N.P. 2015. Effects of tree harvest on the stable-state dynamics of savanna and forest. \textsl{The American Naturalist} (open access: \href{http://www.jstor.org/stable/info/10.1086/680475}{http://dx.doi.org/10.1086/680475}) \vspace{-6mm} \\%
 	
 	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2014. Analysis of stable states in global savannas: Is the CART pulling the horse? 	\textsl{Global Ecology and Biogeography} 23(3):259-263 (open access: \href{http://dx.doi.org/10.1111/geb.12122}{http://dx.doi.org/10.1111/geb.12122}) \vspace{-6mm}\\%
