adds synchrony in review paper

--- a/cv.tex
+++ b/cv.tex
@@ -68,14 +68,16 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
      \section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-     \textbf{Tredennick, A.T.}, Hooten, M.B., Aldridge, C., Homer, C., Kleinhesselink, A.R., and Adler, P.B. Forecasting climate change impacts on plant populations over large spatial extents. In review at \textsl{Ecological Applications}.
+     \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review. (preprint: \href{http://biorxiv.org/}{http://biorxiv.org/})
+     
+     \textbf{Tredennick, A.T.}, Hooten, M.B., Aldridge, C., Homer, C., Kleinhesselink, A.R., and Adler, P.B. Forecasting climate change impacts on plant populations over large spatial extents. In review.
      
         \textbf{Tredennick, A.T.},  and Adler, P. B. In revision. Do we need demographic data to forecast population responses to climate change? (preprint: \href{http://biorxiv.org/content/early/2015/08/30/025742}{http://biorxiv.org/content/early/2015/08/30/025742})
 
 	\section{\mysidestyle Publications\\ \textsl{\footnotesize in press}\\ \textsl{\footnotesize and published}}  
-	\textbf{Tredennick, A.T.}, Adler, P.B., Grace, J.B., Harpole, W.S., Borer, E.T., Seabloom, E.W. and 36 co-authors. In Press. Comment on ``Worldwide evidence of a unimodal relationship between productivity and plant species richness". \textsl{Science}. \vspace{-6mm}\\%
+	\textbf{Tredennick, A.T.}, Adler, P.B., Grace, J.B., Harpole, W.S., Borer, E.T., Seabloom, E.W. and 36 co-authors. 2016. Comment on ``Worldwide evidence of a unimodal relationship between productivity and plant species richness". \textsl{Science} 35(6272):457a-457c. \vspace{-6mm}\\%
 	
-	\textbf{Tredennick, A.T.}, Karemb\'{e}, M., Demb\'{e}l\'{e}, F., Dohn, J., and Hanan, N.P. In Press. No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} (preprint available here: \href{http://peerj.com/ATredennick/}{http://peerj.com/ATredennick/})
+	\textbf{Tredennick, A.T.}, Karemb\'{e}, M., Demb\'{e}l\'{e}, F., Dohn, J., and Hanan, N.P. 2015. No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} 53(4):487-495 (preprint available here: \href{http://peerj.com/ATredennick/}{http://peerj.com/ATredennick/})
 
 	Hanan, N. P., \textbf{Tredennick, A.T.}, Prihodko, L., Bucini, G., and Dohn, J.. 2015. Analysis of stable states in global savannas – a response to Staver and Hansen 	\textsl{Global Ecology and Biogeography} 24(8):988-989 (open access: \href{http://dx.doi.org/10.1111/geb.12321}{http://dx.doi.org/10.1111/geb.12321}) \vspace{-6mm}\\%
    
@@ -146,20 +148,22 @@
   \textsl{Ecology};
 	\textsl{Ecological Applications};
 	\textsl{Journal of Ecology};
+	\textsl{Oecologia};
   \textsl{Elementa};
   \textsl{PLoS One};
 	\textsl{Forest Ecology and Management};
 	\textsl{Agriculture, Ecosystems, and Environment};
 	\textsl{Environmental Management};
 	 \textsl{Koedoe: African Protected Area Conservation and Science};
-	\textsl{National Research Foundation, South Africa}
+	National Research Foundation (South Africa);
+	National Science Foundation
 	
 
  \textbf{Professional Society Membership}\\
     	Ecological Society of America\\
 	American Society of Naturalists
 
-\section{\mysidestyle Professional\\Service\\ \textsl{\footnotesize continued}}
+%\section{\mysidestyle Professional\\Service\\ \textsl{\footnotesize continued}}
 
    \textbf{University Service and Public Outreach}\\
    	Director of Social Media, \textsl{NREL EcoPress}: http://nrelscience.org (2012-2013)\\
@@ -171,6 +175,8 @@
 %__________________________________________________________________________________________________________________
     % Presentations
     \section{\mysidestyle Presentations}
+    Tredennick, A.T. and P.B. Adler. (2015) ``Do we need detailed demographic data to forecast population responses to climate change? 2015 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
+    
     Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2014) ``Africa's Fuelwood Footprint and the Biome-Level Impacts of Tree Harvest,'' Station d'Ecologie Exp\'{e}rimentale du CNRS, Moulis, France. \vspace{-6mm}\\% 
     
     Tredennick, A.T., Adler, P.B., Aldridge, C.L., Homer C.G., Iles, D.T., Kleinhesselink, A., LaMalfa, E., and Mann, R. (2014) ``Forecasting climate change impacts on plant population dynamics at large spatial extents: a test case with sagebrush (\emph{Artemisia}) species.'' 2014 Annual Meetings of the Ecological Society of America.\vspace{-6mm}\\%
@@ -187,9 +193,10 @@
     
     Tredennick, A.T., Hanan, N.P., Bucini, G., and Parton, W. (2012) ``Using Diverse Multi-Scale Data to Assess Patterns and Sustainability of Fuelwood Harvest in Sub-Saharan Africa,'' poster presentation, NSF FORECAST RCN Meeting, Woods Hole, MA. \vspace{-6mm}\\%
     
-    Tredennick, A.T., Bentley, L.P., and Hanan, N.P. (2012) ``Whole-tree and branch-level scaling in savannas: testing Metabolic Scaling Theory in a non-ideal system,'' Ecological Society of America Annual Meeting, Portland, OR. \vspace{-6mm}\\%
-    
     \newpage{}
+    
+    Tredennick, A.T., Bentley, L.P., and Hanan, N.P. (2012) ``Whole-tree and branch-level scaling in savannas: testing Metabolic Scaling Theory in a non-ideal system,'' Ecological Society of America Annual Meeting, Portland, OR. \vspace{-6mm}\\%
+  
     
     Dohn, J., Hanan, N.P., Tredennick, A.T., Karemb\'{e}, M., and Demb\'{e}l\'{e}, F. ``Tree-grass interactions in savannas: Investigating competitive and facilitative mechanisms across a precipitation gradient,'' Ecological Society of America Annual Meeting, Portland, OR. \vspace{-6mm}\\%
     
