updates with new paper in review

--- a/cv.tex
+++ b/cv.tex
@@ -68,7 +68,7 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
      \section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-     \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review. (preprint: \href{http://biorxiv.org/}{http://biorxiv.org/})
+     \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review.
      
      \textbf{Tredennick, A.T.}, Hooten, M.B., Aldridge, C., Homer, C., Kleinhesselink, A.R., and Adler, P.B. Forecasting climate change impacts on plant populations over large spatial extents. In review.
      
