updates sageAbundance to in press

--- a/cv.tex
+++ b/cv.tex
@@ -70,11 +70,12 @@
      \section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review. (preprint: \href{http://biorxiv.org/}{http://biorxiv.org/})
      
-     \textbf{Tredennick, A.T.}, Hooten, M.B., Aldridge, C., Homer, C., Kleinhesselink, A.R., and Adler, P.B. Forecasting climate change impacts on plant populations over large spatial extents. In review.
-     
-        \textbf{Tredennick, A.T.},  and Adler, P. B. In revision. Do we need demographic data to forecast population responses to climate change? (preprint: \href{http://biorxiv.org/content/early/2015/08/30/025742}{http://biorxiv.org/content/early/2015/08/30/025742})
+        \textbf{Tredennick, A.T.}, M.B. Hooten,  and Adler, P. B. In revision. Do we need demographic data to forecast population responses to climate change? (preprint: \href{http://biorxiv.org/content/early/2015/08/30/025742}{http://biorxiv.org/content/early/2015/08/30/025742})
 
 	\section{\mysidestyle Publications\\ \textsl{\footnotesize in press}\\ \textsl{\footnotesize and published}}  
+	
+	  \textbf{Tredennick, A.T.}, M.B. Hooten, C.L. Aldridge, C., Homer, A.R. Kleinhesselink, and P.B. Adler. In press. Forecasting climate change impacts on plant populations over large spatial extents. \emph{Ecosphere}.
+	
 	\textbf{Tredennick, A.T.}, Adler, P.B., Grace, J.B., Harpole, W.S., Borer, E.T., Seabloom, E.W. and 36 co-authors. 2016. Comment on ``Worldwide evidence of a unimodal relationship between productivity and plant species richness". \textsl{Science} 35(6272):457a-457c. \vspace{-6mm}\\%
 	
 	\textbf{Tredennick, A.T.}, Karemb\'{e}, M., Demb\'{e}l\'{e}, F., Dohn, J., and Hanan, N.P. 2015. No effects of fire, large herbivores, and their interaction on regrowth of harvested trees in two West African savannas. \textsl{African Journal of Ecology} 53(4):487-495 (preprint available here: \href{http://peerj.com/ATredennick/}{http://peerj.com/ATredennick/})
