adds Ecosphere journal info

--- a/cv.tex
+++ b/cv.tex
@@ -77,7 +77,7 @@
 	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (In press). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}.
 	
-	  \textbf{Tredennick, A.T.}, M.B. Hooten, C.L. Aldridge, C. Homer, A.R. Kleinhesselink, and P.B. Adler. (In press). Forecasting climate change impacts on plant populations over large spatial extents. \emph{Ecosphere}.
+	  \textbf{Tredennick, A.T.}, M.B. Hooten, C.L. Aldridge, C. Homer, A.R. Kleinhesselink, and P.B. Adler. (2016). Forecasting climate change impacts on plant populations over large spatial extents. \emph{Ecosphere} 7(10):e01525.
 	
 	\textbf{Tredennick, A.T.}, P.B. Adler, J.B. Grace, W.S. Harpole, E.T. Borer, E.W. Seabloom, and 36 co-authors. (2016). Comment on ``Worldwide evidence of a unimodal relationship between productivity and plant species richness". \textsl{Science} 35(6272):457a-457c. \vspace{-6mm}\\%
 	
