adds stab-coex ms to in review

--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
 	
-	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (In press). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}.
+	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2016). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}, Early View (online).
 	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten, C.L. Aldridge, C. Homer, A.R. Kleinhesselink, and P.B. Adler. (2016). Forecasting climate change impacts on plant populations over large spatial extents. \emph{Ecosphere} 7(10):e01525.
 	
@@ -100,6 +100,8 @@
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. Environmental responses, not species interactions, determine species synchrony in natural plant communities. In review at \emph{Ecology}.
+     
+     \textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}.
 	
 	Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. Water and nitrogen uptake are better associated with resource availability than root biomass. In review at \emph{Nature Ecology and Evolution}.
 	
@@ -107,8 +109,6 @@
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
     Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, and S. Baer. Asynchrony of ecosystem functioning across space increases ecosystem stability through time. In preparation for November submission to \emph{Ecology Letters}. \\%
     \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}} \vspace{-6mm}\\%
-    
-    \textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. Revisiting how species coexist reveals a negative diversity-stability relationship. In preparation for December submission to \emph{Ecology Letters}.
     
 	
     %__________________________________________________________________________________________________________________
