updates review list

--- a/cv.tex
+++ b/cv.tex
@@ -168,20 +168,21 @@
      \section{\textmd{\textsf{\color{MidnightBlue}{Professional\\Service}}}}
     %\section{\mysidestyle Professional\\Service}
     \textbf{Reviewer}\\
-    	\textsl{Proceedings of the National Academy of Sciences};
-	\textsl{Ecology Letters};
-  \textsl{Ecology};
-	\textsl{Ecological Applications};
-	\textsl{Journal of Ecology};
-	\textsl{Oecologia};
-  \textsl{Elementa};
-  \textsl{PLoS One};
-	\textsl{Forest Ecology and Management};
-	\textsl{Agriculture, Ecosystems, and Environment};
-	\textsl{Environmental Management};
-	 \textsl{Koedoe: African Protected Area Conservation and Science};
-	National Research Foundation (South Africa);
-	National Science Foundation (\emph{ad hoc} reviewer)
+    \textsl{Agriculture, Ecosystems, and Environment};
+    \textsl{Ecological Applications};
+    \textsl{Ecology};
+    \textsl{Ecology Letters};
+    \textsl{Elementa};
+    \textsl{Environmental Management};
+    \textsl{Forest Ecology and Management};
+    \textsl{Journal of Ecology};
+    \textsl{Koedoe: African Protected Area Conservation and Science};
+    \textsl{Oecologia};
+    \textsl{Proceedings of the National Academy of Sciences};
+    \textsl{Proceedings of the Royal Society: B};
+     \textsl{PLoS One};
+     National Research Foundation (South Africa);
+     National Science Foundation (\emph{ad hoc} reviewer)
 	
 
  \textbf{Professional Society Membership}\\
