--- a/cv.tex
+++ b/cv.tex
@@ -107,7 +107,7 @@
 	
 	\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
-    Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, and S. Baer. Asynchrony of ecosystem functioning across space increases ecosystem stability through time. In preparation for November submission to \emph{Ecology Letters}. \\%
+    Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, and S. Baer. Asynchrony of ecosystem functioning across space increases ecosystem stability through time. In preparation for \emph{Ecology Letters}. \\%
     \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}} \vspace{-6mm}\\%
     
 	
