fixes synchrony title

--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
       
-      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (In press). Environmental responses, not species interactions, determine species synchrony in natural plant communities. \emph{Ecology}.
+      \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (In press). Environmental responses, not species interactions, determine synchrony of dominant species in semiarid grasslands. \emph{Ecology}.
 	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2016). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}, Early View (online).
 	
