adds JVS to reviewer section

--- a/cv.tex
+++ b/cv.tex
@@ -177,10 +177,11 @@
     \textsl{Environmental Management};
     \textsl{Forest Ecology and Management};
     \textsl{Journal of Ecology};
+    \textsl{Journal of Vegetation Science};
     \textsl{Koedoe: African Protected Area Conservation and Science};
     \textsl{Oecologia};
     \textsl{Proceedings of the National Academy of Sciences};
-    \textsl{Proceedings of the Royal Society: B};
+    \textsl{Proceedings of the Royal Society B};
      \textsl{PLoS One};
      National Research Foundation (South Africa);
      National Science Foundation (\emph{ad hoc} reviewer)
