small updates for UIdaho job

--- a/cv.tex
+++ b/cv.tex
@@ -30,7 +30,7 @@
     %__________________________________________________________________________________________________________________
     % Research Interests
     \section{\textmd{\textsf{\color{MidnightBlue}{Research\\Interests}}}}
-		stability of populations, communities, and ecosystems; data--model assimilation; ecology of savannas and forests; coexistence of species and functional groups; ecological forecasting %
+		stability of populations, communities, and ecosystems; data--model assimilation; ecology of rangelands and savannas; coexistence of species and functional groups; ecological forecasting %
     %__________________________________________________________________________________________________________________
     % Academic Appointments
     %	 	\vspace{-2mm}
@@ -104,11 +104,11 @@
 		
 	\section{\textmd{\textsf{\color{MidnightBlue}{Publications \\ \footnotesize{in review}}}}}
 	%\section{\mysidestyle Publications\\ \textsl{\footnotesize in review}}
-	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. In review at \emph{Ecology Letters}.
+	\textbf{Tredennick, A.T.}, P.B. Adler, and F.R. Adler. The relationship between species richness and ecosystem variability is shaped by the mechanism of coexistence. Invited for revision at \emph{Ecology Letters}.
 	
 	\section{\textmd{\textsf{\color{MidnightBlue}{Manuscripts \\ \footnotesize{in preparation} \\ \footnotesize{(available upon request)}}}}}
 	 %\section{\mysidestyle Manuscripts\\ \textsl{\footnotesize in preparation}\\ \textsl{\footnotesize (available upon request)}}  
-    Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, and S. Baer. Asynchrony of ecosystem functioning across space increases ecosystem stability through time. In preparation for \emph{Ecology Letters}. \\%
+    Wilcox*, K.R., \textbf{A.T. Tredennick}*, S.E. Koerner, E. Grman, L.M. Hallett, M.L. Avolio, K.J. La Pierre, G.R. Houseman, F. Isbell, D.S. Johnson, \emph{et al.}. Asynchrony of ecosystem functioning across space increases ecosystem stability through time. In preparation for \emph{Ecology Letters}. \\%
     \hspace{2em} \textsf{\footnotesize{*Shared first authorship by Wilcox and Tredennick}} \vspace{-6mm}\\%
     
 	
@@ -116,11 +116,12 @@
     % Funding
     \section{\textmd{\textsf{\color{MidnightBlue}{Competitive\\Funding \\ \footnotesize{External: \$297,000} \\ \footnotesize{Internal: \$17,500}}}}}
     %\section{\mysidestyle Competitive\\Funding\\\textsl{\footnotesize External: \$297,000}\\\textsl{\footnotesize Internal: \$17,500}}
-    ``Diversity-Stability Relationships and Coexistence: New Theory and Empirical Tests," NSF Postdoctoral Research Fellowship in Biology and Mathematics, \$207,000 (2014-2017)\vspace{2mm}\\%
+    \textbf{Pending}: ``Synthesizing time series of plant and animal populations to understand the limits to ecological forecasts'', USGS Powell Center Working Group Proposal.\vspace{2mm}\\
+    ``Diversity-Stability Relationships and Coexistence: New Theory and Empirical Tests," NSF Postdoctoral Research Fellowship in Biology and Mathematics, \$207,000 (2014-2017).\vspace{2mm}\\%
     ``Effective Science Communication and Public Relations at NREL through EcoPress," Natural Resource Ecology Lab, \$6,000 (Co-I) (2013) \vspace{2mm}\\%
-    ``NESSF: Fuelwood, Savannas, and Climate Change: Integrating Modeling, Field Experimentation, and Optical and Radar Remote Sensing," NASA, \$90,000 (2011-2014) \vspace{2mm}\\%
-    ``Expanding Ecology to Meet Society: Traditional Experiments Coupled with Anthropological Methods in a Savanna Socio-Ecological System,'' Natural Resource Ecology Laboratory James E. Ellis Memorial Scholarship, \$1,500 (2010)\vspace{2mm}\\%
-    ``Building a WCNR `Partnership for International Research and Education' in African Savannas: Undergraduate and Graduate Field-Based Education in Mali, West Africa," Warner College of Natural Resources, \$10,000 (PI--Hanan; collaborative proposal of the Hanan lab group) (2010)%
+    ``NESSF: Fuelwood, Savannas, and Climate Change: Integrating Modeling, Field Experimentation, and Optical and Radar Remote Sensing," NASA, \$90,000 (2011-2014). \vspace{2mm}\\%
+    ``Expanding Ecology to Meet Society: Traditional Experiments Coupled with Anthropological Methods in a Savanna Socio-Ecological System,'' Natural Resource Ecology Laboratory James E. Ellis Memorial Scholarship, \$1,500 (2010).\vspace{2mm}\\%
+    ``Building a WCNR `Partnership for International Research and Education' in African Savannas: Undergraduate and Graduate Field-Based Education in Mali, West Africa," Warner College of Natural Resources, \$10,000 (PI--Hanan; collaborative proposal of the Hanan lab group) (2010).%
     
      %__________________________________________________________________________________________________________________
     % Data products
@@ -168,7 +169,7 @@
     % Service
      \section{\textmd{\textsf{\color{MidnightBlue}{Professional\\Service}}}}
     %\section{\mysidestyle Professional\\Service}
-    \textbf{Reviewer}\\
+    \textbf{Reviewer} ($\sim$ 8 per year)\\
     \textsl{Agriculture, Ecosystems, and Environment};
     \textsl{Ecological Applications};
     \textsl{Ecology};
@@ -184,12 +185,15 @@
     \textsl{Proceedings of the Royal Society B};
      \textsl{PLoS One};
      National Research Foundation (South Africa);
-     National Science Foundation (\emph{ad hoc} reviewer)
+     National Science Foundation (\emph{ad hoc} reviewer; 2/year)
 	
 
  \textbf{Professional Society Membership}\\
+        American Society of Naturalists\\
     	Ecological Society of America\\
-	American Society of Naturalists
+	\phantom{} \quad \emph{Rangeland Ecology Section member}\\
+	\phantom{} \quad \emph{Statistical Ecology Section member}\\
+	\phantom{} \quad \emph{Theoretical Ecology Section member}
 
 %\section{\mysidestyle Professional\\Service\\ \textsl{\footnotesize continued}}
 
