updates AK ecosphere details

--- a/cv.tex
+++ b/cv.tex
@@ -75,10 +75,10 @@
    %__________________________________________________________________________________________________________________
     % Refereed Journal Publications
       \section{\textmd{\textsf{\color{MidnightBlue}{Publications}}}}
-      
-      Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. (In press). Water and nitrogen uptake are better associated with resource availability than root biomass. \emph{Ecosphere}.
-      
+
       \textbf{Tredennick, A.T.}, C. de Mazancourt, M. Loreau, and P.B. Adler. (In press). Environmental responses, not species interactions, determine synchrony of dominant species in semiarid grasslands. \emph{Ecology}.
+      
+      Kulmatiski, A., P.B. Adler, J.M. Stark, and \textbf{A.T. Tredennick}. (2017). Water and nitrogen uptake are better associated with resource availability than root biomass. \emph{Ecosphere} 8(3):e01738.
 	
 	  \textbf{Tredennick, A.T.}, M.B. Hooten,  and P.B. Adler. (2016). Do we need demographic data to forecast plant population dynamics? \emph{Methods in Ecology and Evolution}, Early View (online).
 	
